add addBook function

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h4>Kero Samy</h4>
         <p>Any thing</p>
         <button>Remove</button>
-        <hr>
+        <hr />
       </div>
     </div>
     <form action="">
-      <input type="text" placeholder="Title"><br><br>
-      <input type="text" placeholder="Author"><br><br>
-      <button>Add</button>
+      <input id="book-title" type="text" placeholder="Title" /><br /><br />
+      <input id="book-author" type="text" placeholder="Author" /><br /><br />
+      <button id="add-book">Add</button>
     </form>
   </body>
 </html>
