Add addBook feature

--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
   </head>
   <body>
     <h1>Awesome Books</h1>
-    <div class="books-container">
-      <div class="book">
-        <h4>Kero Samy</h4>
-        <p>Any thing</p>
-        <button>Remove</button>
-        <hr />
-      </div>
+    <div class="books-container" id="books-container">
+      
     </div>
     <form action="">
       <input id="book-title" type="text" placeholder="Title" /><br /><br />
       <input id="book-author" type="text" placeholder="Author" /><br /><br />
       <button id="add-book">Add</button>
     </form>
+    <script src="script.js"></script>
   </body>
 </html>
