--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,10 +11,10 @@
     <div class="books-container" id="books-container">
       
     </div>
-    <form action="">
+    <form action="#">
       <input id="book-title" type="text" placeholder="Title" /><br /><br />
       <input id="book-author" type="text" placeholder="Author" /><br /><br />
-      <button id="add-book">Add</button>
+      <button type="button" id="add-book">Add</button>
     </form>
     <script src="script.js"></script>
   </body>
