Add HTML page layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="deploy.css" />
   </head>
   <body>
-    <h1>Awesome Books</h1>
+    <main>
+      <article class="w-auto mt-4 text-center">
+        <section>
+          <h1 class="text-2xl uppercase font-bold text-green-400">All books are awesome</h1>
+        </section>
+      </article>
+    </main>
     <div class="books-container" id="books-container"></div>
     <form action="#">
       <input id="book-title" type="text" placeholder="Title" /><br /><br />
