--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <main>
       <article class="w-auto mt-4 text-center">
         <section>
-          <h1 class="text-2xl uppercase font-bold text-green-400">All books are awesome</h1>
+          <h1 class="text-2xl uppercase font-bold text-green-400">
+            All books are awesome
+          </h1>
         </section>
       </article>
+      <div id="books-container"></div>
+      <form action="#">
+        <input id="book-title" type="text" placeholder="Title" /><br /><br />
+        <input id="book-author" type="text" placeholder="Author" /><br /><br />
+        <button type="submit" id="add-book">Add</button>
+      </form>
     </main>
-    <div class="books-container" id="books-container"></div>
-    <form action="#">
-      <input id="book-title" type="text" placeholder="Title" /><br /><br />
-      <input id="book-author" type="text" placeholder="Author" /><br /><br />
-      <button type="submit" id="add-book">Add</button>
-    </form>
+
     <script src="script.js"></script>
   </body>
 </html>
