--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <main>
       <article class="w-auto mt-4 text-center">
         <section>
-          <h1 class="text-2xl uppercase font-bold text-green-400">
+          <h1 class="text-2xl uppercase font-bold text-green-400 font-serif">
             All books are awesome
           </h1>
         </section>
       </article>
       <div id="books-container"></div>
-      <form action="#">
-        <input id="book-title" type="text" placeholder="Title" /><br /><br />
-        <input id="book-author" type="text" placeholder="Author" /><br /><br />
-        <button type="submit" id="add-book">Add</button>
+      <form action="#" class="w-1/6 m-auto text-right mt-8">
+        <h3 class="text-center mb-4 text-lg uppercase font-semibold text-green-400 font-serif">Add a new book</h3>
+        <input class="min-w-full border rounded border-green-400 p-1" id="book-title" type="text" placeholder="Title" /><br /><br />
+        <input class="min-w-full border rounded border-green-400 p-1" id="book-author" type="text" placeholder="Author" /><br /><br />
+        <button class="bg-green-400 rounded px-2 py-1 font-serif text-white" type="submit" id="add-book">ADD</button>
       </form>
     </main>
 
